add header styles

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <header>
-      <img src="assets/iteration-1/logo.svg" alt=""/>
+      <img src="public\assets\iteration-1\logo.svg" alt=""/>
       <p>fırsatı kaçırma</p>
       <h1>KOD ACIKTIRIR</h1>
       <h1>PİZZA,DOYURUR</h1>
@@ -24,32 +24,32 @@
     <main>
       <section class="icons">
         <div class="icons-item">
-          <img src="assets/iteration-2/icons/1.svg" alt="">
+          <img src="public/assets/iteration-2/icons/1.svg" alt="">
           <p>YENİ! Kore</p>
         </div>
 
         <div class="icons-item">
-          <img src="assets/iteration-2/icons/2.svg" alt="">
+          <img src="public/assets/iteration-2/icons/2.svg" alt="">
           <p>Pizza</p>
         </div>
 
         <div class="icons-item">
-          <img src="assets/iteration-2/icons/3.svg" alt="">
+          <img src="public/assets/iteration-2/icons/3.svg" alt="">
           <p>Burger</p>
         </div>
 
         <div class="icons-item">
-          <img src="assets/iteration-2/icons/4.svg" alt="">
+          <img src="public/assets/iteration-2/icons/4.svg" alt="">
           <p>Kızartmalar</p>
         </div>
 
         <div class="icons-item">
-          <img src="assets/iteration-2/icons/5.svg" alt="">
+          <img src="public/assets/iteration-2/icons/5.svg" alt="">
           <p>Fast Food</p>
         </div>
 
         <div class="icons-item">
-          <img src="assets/iteration-2/icons/6.svg" alt="">
+          <img src="public/assets/iteration-2/icons/6.svg" alt="">
           <p>Gazlı İçecekler</p>
         </div>
       </section>
@@ -86,32 +86,32 @@
       <ul class="category-list">
 
          <li class="category-item active">
-         <img src="assets\iteration-2\icons\1.svg"/>
+         <img src="public/assets\iteration-2\icons\1.svg"/>
         <p>Ramen</p>
         </li>
 
         <li class="category-item">
-        <img src="assets\iteration-2\icons\2.svg"/>
+        <img src="public/assets\iteration-2\icons\2.svg"/>
         <p>Pizza</p>
         </li>
 
         <li class="category-item">
-        <img src="assets\iteration-2\icons\3.svg"/>
+        <img src="public/assets\iteration-2\icons\3.svg"/>
         <p>Burger</p>
         </li>
 
        <li class="category-item">
-       <img src="assets\iteration-2\icons\4.svg"/>
+       <img src="public/assets\iteration-2\icons\4.svg"/>
        <p>French Fries</p>
        </li>
 
        <li class="category-item">
-       <img src="assets\iteration-2\icons\5.svg"/>
+       <img src="public/assets\iteration-2\icons\5.svg"/>
        <p>Fast Food</p>
        </li>
 
        <li class="category-item">
-       <img src="assets\iteration-2\icons\6.svg"/>
+       <img src="public/assets\iteration-2\icons\6.svg"/>
        <p>Soft Drinks</p>
        </li>
      </ul>
@@ -122,7 +122,7 @@
 
      <div class="product-list">
      <div class="product-card">
-      <img src="assets\iteration-2\pictures\food-1.png">
+      <img src="public/assets\iteration-2\pictures\food-1.png">
       <h3>Terminal Pizza</h3>
       <p>4.9</p>
       <p>(200)</p>
@@ -130,7 +130,7 @@
      </div>
 
      <div class="product-card">
-      <img src="assets\iteration-2\pictures\food-2.png">
+      <img src="public/assets\iteration-2\pictures\food-2.png">
       <h3>Position Absolute Acı Pizza</h3>
       <p>4.9</p>
       <p>(200)</p>
@@ -138,7 +138,7 @@
      </div>
 
      <div class="product-card">
-      <img src="assets\iteration-2\pictures\food-3.png">
+      <img src="public/assets\iteration-2\pictures\food-3.png">
       <h3>useEffect Tavuklu Burger</h3>
       <p>4.9</p>
       <p>(200)</p>
@@ -146,9 +146,8 @@
      </div>
    </div>
   </section>
-</body>
 
-<footer class="footer">
+  <footer class="footer">
 
   <div class="footer-container">
 
@@ -178,10 +177,12 @@
       <h4>Instagram</h4>
 
       <div class="instagram-grid">
-        <img src="insta-1.png" alt="">
-        <img src="insta-2.png" alt="">
-        <img src="insta-3.png" alt="">
-        <img src="insta-4.png" alt="">
+        <img src="public\assets\iteration-2\footer\insta\li-0.png" alt="">
+        <img src="public\assets\iteration-2\footer\insta\li-1.png" alt="">
+        <img src="public\assets\iteration-2\footer\insta\li-2.png" alt="">
+        <img src="public\assets\iteration-2\footer\insta\li-3.png" alt="">
+        <img src="public\assets\iteration-2\footer\insta\li-4.png" alt="">
+        <img src="public\assets\iteration-2\footer\insta\li-5.png" alt="">
       </div>
     </div>
   </div>
@@ -191,4 +192,5 @@
   </div>
 
 </footer>
+</body>
 </html>
