--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./workintech.svg" />
     <link rel="stylesheet" href="./style.css">
@@ -9,188 +9,205 @@
     <title>Workintech + 🍕</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quattrocento:wght@400;700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Satisfy&display=swap" rel="stylesheet">
-  </head>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quattrocento:wght@400;700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Satisfy&display=swap"
+        rel="stylesheet">
+</head>
 
-  <body>
+<body>
     <header>
-      <img src="public\assets\iteration-1\logo.svg" alt=""/>
-      <p>fırsatı kaçırma</p>
-      <h1>KOD ACIKTIRIR</h1>
-      <h1>PİZZA,DOYURUR</h1>
-      <button class="btn">ACIKTIM</button>
+        <img src="public\assets\iteration-1\logo.svg" alt="" />
+        <p>fırsatı kaçırma</p>
+        <h1>KOD ACIKTIRIR</h1>
+        <h1>PİZZA, DOYURUR</h1>
+        <button class="btn">ACIKTIM</button>
     </header>
+    <section class="icons">
+        <div class="icons-item">
+            <img src="public/assets/iteration-2/icons/1.svg" alt="">
+            <p>YENİ! Kore</p>
+        </div>
+
+        <div class="icons-item">
+            <img src="public/assets/iteration-2/icons/2.svg" alt="">
+            <p>Pizza</p>
+        </div>
+
+        <div class="icons-item">
+            <img src="public/assets/iteration-2/icons/3.svg" alt="">
+            <p>Burger</p>
+        </div>
+
+        <div class="icons-item">
+            <img src="public/assets/iteration-2/icons/4.svg" alt="">
+            <p>Kızartmalar</p>
+        </div>
+
+        <div class="icons-item">
+            <img src="public/assets/iteration-2/icons/5.svg" alt="">
+            <p>Fast Food</p>
+        </div>
+
+        <div class="icons-item">
+            <img src="public/assets/iteration-2/icons/6.svg" alt="">
+            <p>Gazlı İçecekler</p>
+        </div>
+    </section>
 
     <main>
-      <section class="icons">
-        <div class="icons-item">
-          <img src="public/assets/iteration-2/icons/1.svg" alt="">
-          <p>YENİ! Kore</p>
-        </div>
+        <section class="promo">
+            <div class="promo-card large-card">
+                <img class="promo-img p-large" src="public/assets/iteration-2/cta/kart-1.png" alt="" />
 
-        <div class="icons-item">
-          <img src="public/assets/iteration-2/icons/2.svg" alt="">
-          <p>Pizza</p>
-        </div>
+                <div class="l-concent">
+                    <h2>Özel</h2>
+                    <h2>Lezzetus</h2>
+                    <p>Position: Absolute Acı Burger</p>
+                    <button class="promo-btn">SİPARİŞ VER</button>
+                </div>
+            </div>
 
-        <div class="icons-item">
-          <img src="public/assets/iteration-2/icons/3.svg" alt="">
-          <p>Burger</p>
-        </div>
+            <div class="promo-small">
+                <div class="promo-card p-small">
+                    <img class="promo-img" src="public/assets/iteration-2/cta/kart-2.png" alt="" />
 
-        <div class="icons-item">
-          <img src="public/assets/iteration-2/icons/4.svg" alt="">
-          <p>Kızartmalar</p>
-        </div>
+                    <div class="promo-content">
+                        <h2>Hackathlon</h2>
+                        <h2>Burger Menü</h2>
+                        <button class="promo-btn">SİPARİŞ VER</button>
+                    </div>
+                </div>
 
-        <div class="icons-item">
-          <img src="public/assets/iteration-2/icons/5.svg" alt="">
-          <p>Fast Food</p>
-        </div>
+                <div class="promo-card p-small">
+                    <img class="promo-img" src="public/assets/iteration-2/cta/kart-3.png" alt="" />
 
-        <div class="icons-item">
-          <img src="public/assets/iteration-2/icons/6.svg" alt="">
-          <p>Gazlı İçecekler</p>
-        </div>
-      </section>
+                    <div class="promo-content" style="color: black;">
+                        <h2><span style="color: #d62828;">Çoooook</span> hızlı</h2>
+                        <h2>npm gibi kurye</h2>
+                        <button class="promo-btn">SİPARİŞ VER</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+
+        <section class="subtitle">
+            <p>en çok paketlenen menüler</p>
+            <h1>Acıktıran Kodlara Doyuran Lezzetler</h1>
+        </section>
+
+        <section class="categories">
+            <ul class="category-list">
+
+                <li class="category-item active">
+                    <img src="public/assets\iteration-2\icons\1.svg" />
+                    <p>Ramen</p>
+                </li>
+
+                <li class="category-item">
+                    <img src="public/assets\iteration-2\icons\2.svg" />
+                    <p>Pizza</p>
+                </li>
+
+                <li class="category-item">
+                    <img src="public/assets\iteration-2\icons\3.svg" />
+                    <p>Burger</p>
+                </li>
+
+                <li class="category-item">
+                    <img src="public/assets\iteration-2\icons\4.svg" />
+                    <p>French Fries</p>
+                </li>
+
+                <li class="category-item">
+                    <img src="public/assets\iteration-2\icons\5.svg" />
+                    <p>Fast Food</p>
+                </li>
+
+                <li class="category-item">
+                    <img src="public/assets\iteration-2\icons\6.svg" />
+                    <p>Soft Drinks</p>
+                </li>
+            </ul>
+        </section>
+
+        <section class="products">
+            <h2>Acıktıran Kodlara Doyuran Lezzetler</h2>
+
+            <div class="product-list">
+                <div class="product-card">
+                    <img src="public/assets\iteration-2\pictures\food-1.png">
+                    <h3>Terminal Pizza</h3>
+                    <p>4.9</p>
+                    <p>(200)</p>
+                    <p class="price">₺60</p>
+                </div>
+
+                <div class="product-card">
+                    <img src="public/assets\iteration-2\pictures\food-2.png">
+                    <h3>Position Absolute Acı Pizza</h3>
+                    <p>4.9</p>
+                    <p>(200)</p>
+                    <p class="price">₺60</p>
+                </div>
+
+                <div class="product-card">
+                    <img src="public/assets\iteration-2\pictures\food-3.png">
+                    <h3>useEffect Tavuklu Burger</h3>
+                    <p>4.9</p>
+                    <p>(200)</p>
+                    <p class="price">₺60</p>
+                </div>
+            </div>
+        </section>
     </main>
 
+    <footer class="footer">
 
-    <section class="promo">
-      <div class="promo-card large-card">
-        <h2>Özel</h2>
-        <h2>Lezzetus</h2>
-        <p>Position: Absolute Acı Burger</p>
-        <button class="promo-btn">SİPARİŞ VER</button>
-      </div>
+        <div class="footer-container">
 
-      <div class="promo-card">
-        <h2>Hackathlon</h2>
-        <h2>Burger Menü</h2>
-        <button class="promo-btn">SİPARİŞ VER</button>
-      </div>
+            <div class="footer-brand">
+                <h3 class="footer-logo">Teknolojik Yemekler</h3>
 
-      <div class="promo-card">
-        <h2>Çoooook hızlı</h2>
-        <h2>npm gibi kurye</h2>
-        <button class="promo-btn">SİPARİŞ VER</button>
-      </div>
-    </section>
+                <ul class="footer-contact">
+                    <li>341 Londonderry Road, Istanbul Türkiye</li>
+                    <li>info@teknolojikyemekler.com</li>
+                    <li>+90 212 123 45 67</li>
+                </ul>
+            </div>
 
-    <section class="subtitle">
-      <p>en çok paketlenen menüler</p>
-      <h1>Acıktıran Kodlara Doyuran Lezzetler</h1>
-    </section>
-
-    <section class="categories">
-      <ul class="category-list">
-
-         <li class="category-item active">
-         <img src="public/assets\iteration-2\icons\1.svg"/>
-        <p>Ramen</p>
-        </li>
-
-        <li class="category-item">
-        <img src="public/assets\iteration-2\icons\2.svg"/>
-        <p>Pizza</p>
-        </li>
-
-        <li class="category-item">
-        <img src="public/assets\iteration-2\icons\3.svg"/>
-        <p>Burger</p>
-        </li>
-
-       <li class="category-item">
-       <img src="public/assets\iteration-2\icons\4.svg"/>
-       <p>French Fries</p>
-       </li>
-
-       <li class="category-item">
-       <img src="public/assets\iteration-2\icons\5.svg"/>
-       <p>Fast Food</p>
-       </li>
-
-       <li class="category-item">
-       <img src="public/assets\iteration-2\icons\6.svg"/>
-       <p>Soft Drinks</p>
-       </li>
-     </ul>
-   </section>
-
-   <section class="products">
-    <h2>Acıktıran Kodlara Doyuran Lezzetler</h2>
-
-     <div class="product-list">
-     <div class="product-card">
-      <img src="public/assets\iteration-2\pictures\food-1.png">
-      <h3>Terminal Pizza</h3>
-      <p>4.9</p>
-      <p>(200)</p>
-      <p class="price">₺60</p>
-     </div>
-
-     <div class="product-card">
-      <img src="public/assets\iteration-2\pictures\food-2.png">
-      <h3>Position Absolute Acı Pizza</h3>
-      <p>4.9</p>
-      <p>(200)</p>
-      <p class="price">₺60</p>
-     </div>
-
-     <div class="product-card">
-      <img src="public/assets\iteration-2\pictures\food-3.png">
-      <h3>useEffect Tavuklu Burger</h3>
-      <p>4.9</p>
-      <p>(200)</p>
-      <p class="price">₺60</p>
-     </div>
-   </div>
-  </section>
-
-  <footer class="footer">
-
-  <div class="footer-container">
-
-     <div class="footer-brand">
-      <h3 class="footer-logo">Teknolojik Yemekler</h3>
-
-      <ul class="footer-contact">
-        <li>341 Londonderry Road, Istanbul Türkiye</li>
-        <li>info@teknolojikyemekler.com</li>
-        <li>+90 212 123 45 67</li>
-      </ul>
-     </div>
-
-    <nav class="footer-menu">
-      <h4>Hot Menu</h4>
-      <ul>
-        <li><a href="#">Terminal Pizza</a></li>
-        <li><a href="#">5 Kişilik Hackathon Pizza</a></li>
-        <li><a href="#">Kore Usulü Tavuk</a></li>
-        <li><a href="#">Burger Combo</a></li>
-        <li><a href="#">Pizza & Burger Menü</a></li>
-      </ul>
-    </nav>
+            <nav class="footer-menu">
+                <h4>Hot Menu</h4>
+                <ul>
+                    <li><a href="#">Terminal Pizza</a></li>
+                    <li><a href="#">5 Kişilik Hackathon Pizza</a></li>
+                    <li><a href="#">Kore Usulü Tavuk</a></li>
+                    <li><a href="#">Burger Combo</a></li>
+                    <li><a href="#">Pizza & Burger Menü</a></li>
+                </ul>
+            </nav>
 
 
-    <div class="footer-instagram">
-      <h4>Instagram</h4>
+            <div class="footer-instagram">
+                <h4>Instagram</h4>
 
-      <div class="instagram-grid">
-        <img src="public\assets\iteration-2\footer\insta\li-0.png" alt="">
-        <img src="public\assets\iteration-2\footer\insta\li-1.png" alt="">
-        <img src="public\assets\iteration-2\footer\insta\li-2.png" alt="">
-        <img src="public\assets\iteration-2\footer\insta\li-3.png" alt="">
-        <img src="public\assets\iteration-2\footer\insta\li-4.png" alt="">
-        <img src="public\assets\iteration-2\footer\insta\li-5.png" alt="">
-      </div>
-    </div>
-  </div>
+                <div class="instagram-grid">
+                    <img src="public\assets\iteration-2\footer\insta\li-0.png" alt="">
+                    <img src="public\assets\iteration-2\footer\insta\li-1.png" alt="">
+                    <img src="public\assets\iteration-2\footer\insta\li-2.png" alt="">
+                    <img src="public\assets\iteration-2\footer\insta\li-3.png" alt="">
+                    <img src="public\assets\iteration-2\footer\insta\li-4.png" alt="">
+                    <img src="public\assets\iteration-2\footer\insta\li-5.png" alt="">
+                </div>
+            </div>
+        </div>
 
-  <div class="footer-bottom">
-    <p>© 2023 Teknolojik Yemekler.</p>
-  </div>
+        <div class="footer-bottom">
+            <p>© 2023 Teknolojik Yemekler.</p>
+        </div>
 
-</footer>
+    </footer>
 </body>
+
 </html>
