add product section styles and markups

--- a/index.html
+++ b/index.html
@@ -133,31 +133,37 @@
         </section>
 
         <section class="products">
-            <h2>Acıktıran Kodlara Doyuran Lezzetler</h2>
-
             <div class="product-list">
                 <div class="product-card">
                     <img src="public/assets\iteration-2\pictures\food-1.png">
+
                     <h3>Terminal Pizza</h3>
-                    <p>4.9</p>
-                    <p>(200)</p>
-                    <p class="price">₺60</p>
+                    <div class="product-info">
+                        <p>4.9</p>
+                        <p>(200)</p>
+                        <p class="price">₺60</p>
+                    </div>
                 </div>
 
                 <div class="product-card">
                     <img src="public/assets\iteration-2\pictures\food-2.png">
                     <h3>Position Absolute Acı Pizza</h3>
-                    <p>4.9</p>
-                    <p>(200)</p>
-                    <p class="price">₺60</p>
+                    <div class="product-info">
+                        <p>4.9</p>
+                        <p>(200)</p>
+                        <p class="price">₺60</p>
+                    </div>
+
                 </div>
 
                 <div class="product-card">
                     <img src="public/assets\iteration-2\pictures\food-3.png">
                     <h3>useEffect Tavuklu Burger</h3>
-                    <p>4.9</p>
-                    <p>(200)</p>
-                    <p class="price">₺60</p>
+                    <div class="product-info">
+                        <p>4.9</p>
+                        <p>(200)</p>
+                        <p class="price">₺60</p>
+                    </div>
                 </div>
             </div>
         </section>
