add footer styles and modify it

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quattrocento:wght@400;700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Satisfy&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
 </head>
 
 <body>
@@ -132,6 +134,7 @@
             </ul>
         </section>
 
+
         <section class="products">
             <div class="product-list">
                 <div class="product-card">
@@ -174,16 +177,22 @@
         <div class="footer-container">
 
             <div class="footer-brand">
-                <h3 class="footer-logo">Teknolojik Yemekler</h3>
+                <img src="public\assets\iteration-2\footer\logo-footer.svg">
 
                 <ul class="footer-contact">
-                    <li>341 Londonderry Road, Istanbul Türkiye</li>
-                    <li>info@teknolojikyemekler.com</li>
-                    <li>+90 212 123 45 67</li>
+                    <li>
+                        <img src="public\assets\iteration-2\footer\icons\icon-1.png" /> 341 Londonderry Road, <br> Istanbul Türkiye
+                    </li>
+                    <li>
+                        <img src="public\assets\iteration-2\footer\icons\icon-2.png" /> info@teknolojikyemekler.com
+                    </li>
+                    <li>
+                        <img src="public\assets\iteration-2\footer\icons\icon-3.png" /> +90 212 123 45 67
+                    </li>
                 </ul>
             </div>
 
-            <nav class="footer-menu">
+            <div class="footer-menu">
                 <h4>Hot Menu</h4>
                 <ul>
                     <li><a href="#">Terminal Pizza</a></li>
@@ -192,7 +201,7 @@
                     <li><a href="#">Burger Combo</a></li>
                     <li><a href="#">Pizza & Burger Menü</a></li>
                 </ul>
-            </nav>
+            </div>
 
 
             <div class="footer-instagram">
@@ -210,9 +219,11 @@
         </div>
 
         <div class="footer-bottom">
-            <p>© 2023 Teknolojik Yemekler.</p>
+            <div id="bottom-items">
+                <p>© 2023 Teknolojik Yemekler.</p>
+                <i style="height: 24px;" class="fa-brands fa-twitter"></i>
+            </div>
         </div>
-
     </footer>
 </body>
 
