add responsive mobile and tablet styles with media queries

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="promo-card large-card">
                 <img class="promo-img p-large" src="public/assets/iteration-2/cta/kart-1.png" alt="" />
 
-                <div class="l-concent">
+                <div class="l-content">
                     <h2>Özel</h2>
                     <h2>Lezzetus</h2>
                     <p>Position: Absolute Acı Burger</p>
